--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -3331,5 +3331,32 @@ sub {
   color: #800080;
   display: inline-block;
 }
+.select-setting > select{
+  display: block;
+    width: 100%;
+    padding: 5px 5px;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #000;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    outline: none;
+   
+}
+.wrp-select-setting{
+  display: flex;
+  justify-content: space-between;
+}
+.label-setting{
+  width: 38%;
+  align-self: center;
+}
+.select-setting{
+  width: 60%;
+  align-self: center;
+}
 
 /* multiple report css closed here */
