--- a/src/components/css/style1.css
+++ b/src/components/css/style1.css
@@ -11,7 +11,9 @@
     margin-right: 10px; */
     
   }
-
+  .modal-open {
+    overflow: scroll!important;
+}
   .action-list3{
     margin: 0px ;
     padding: 0px ;
